--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
   },
   "devDependencies": {
     "bower": "^1.8.0",
+    "dateformat": "^2.0.0",
+    "install": "^0.8.8",
     "jade": "^1.11.0",
+    "moment": "^2.18.1",
     "mysql": "^2.13.0",
+    "npm": "^4.4.4",
     "restler": "^3.4.0"
   }
 }
