--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "fast-csv": "^2.4.1",
     "json2csv": "^3.7.3",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
